# mscthesis

./: .gitignore  LICENSE.TXT  deps.sh  specification.odt  update_webservice.sh
pgf+/: CMakeLists.txt
pgf+/include/gf/: Exception.h  GenerateTrees.h  Generator.h  GeneratorException.h  IOException.h  Linearizer.h  LinearizerException.h  PGF.h  PGFBuilder.h  PGFReader.h  ParseException.h  Parser.h  RefBase.h  UnknownCategoryException.h  UnknownLanguageException.h  stringutil.h  trees
pgf+/pgf+.xcodeproj/: project.pbxproj
pgf+/pgf+ios/: pgf+ios-Prefix.pch  pgf_ios.h  pgf_ios.m
pgf+/src/: Exception.cpp  GenerateTrees.cpp  Generator.cpp  GeneratorException.cpp  IOException.cpp  Linearizer.cpp  LinearizerException.cpp  PGF.cpp  PGFBuilder.cpp  PGFReader.cpp  ParseException.cpp  Parser.cpp  RefBase.cpp  UnknownCategoryException.cpp  UnknownLanguageException.cpp
pgf+/src/linearizer/: AppResult.cpp  Bracket.cpp  BracketedToken.cpp  CncType.cpp  LeafKP.cpp  LeafKS.cpp  LinTriple.cpp  RezDesc.cpp
pgf+/src/parser/: ActiveItem.cpp  ActiveSet.cpp  Chart.cpp  IMApplication.cpp  IMLambda.cpp  IMLiteral.cpp  IMMetaVariable.cpp  IMTree.cpp  IMVariable.cpp  ParseState.cpp  ParseTrie.cpp
pgf+/src/reader/: AbsCat.cpp  AbsFun.cpp  AbsNameExp.cpp  Abstract.cpp  AlternToksSymbol.cpp  Alternative.cpp  AppExp.cpp  AppPattern.cpp  ApplProduction.cpp  ArgConstSymbol.cpp  (+31 more)
pgf+/test/: AnswerTest.cpp  FoodsLinearizeTest.cpp  FoodsParseTest.cpp  FoodsPredictTest.cpp  GenerateTreesTest.cpp  IndexedPGFTest.cpp  Mountaineering.pgf  MountaineeringLinearizeTest.cpp  StartCatTest.cpp  testutil.h
(+157 files in other folders)
